[fx][bug] CSS: prevent content division to expand if words are too long

--- a/gc_lang/fr/webext/content_scripts/panel.css
+++ b/gc_lang/fr/webext/content_scripts/panel.css
@@ -95,7 +95,7 @@
 
 .grammalecte_panel_content {
     position: absolute;
-    min-width: 100%;
+    width: 100%;
     height: calc(100% - 55px); /* panel height - title_bar */
     overflow: auto;
 }
